🐛fix: removing blue hover effect on mobile

--- a/floating.css
+++ b/floating.css
@@ -281,3 +281,14 @@
     animation: shownotch 2s;
     animation-fill-mode: forwards;
 }
+
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
